lần cuối vào master

--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -1,4 +1,5 @@
 # Error page
+web.name=TaskUnite
 error.title=Your request cannot be processed
 error.subtitle=Sorry, an error has occurred.
 error.status=Status:
@@ -19,3 +20,15 @@ email.reset.title=taskunite password reset
 email.reset.greeting=Dear {0}
 email.reset.text1=For your taskunite account a password reset was requested, please click on the URL below to reset it:
 email.reset.text2=Regards,
+home.find-job=Find jobs
+home.contact=Contact
+home.post-new-job=Post new Job
+home.category=Category
+home.sign-in=Sign in
+home.services=Services 
+home.job-title-keywords-or-company-name=job title, keywords or company name...
+home.title=TaskUnite 
+home.recent-job=Recent Jobs
+home.search=Search
+home.city-province-or-region=city, province or region
+home.show-more=Show more
