--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -19,3 +19,16 @@ email.reset.title=taskunite password reset
 email.reset.greeting=Dear {0}
 email.reset.text1=For your taskunite account a password reset was requested, please click on the URL below to reset it:
 email.reset.text2=Regards,
+home.find-job=T\uFFFDm ki?m
+web.name=TaskUnite
+home.contact=Li\u00EAn h\u1EC7
+home.post-new-job=\u0110\u0103ng vi\u1EC7c
+home.category=Danh m\u1EE5c    
+home.sign-in=\u0110\u0103ng nh\u1EADp
+home.services=D\u1ECBch v\u1EE5
+home.job-title-keywords-or-company-name=t\u00EAn c\u00F4ng vi\u1EC7c, c\u00F4ng ty, m\u00F4 t\u1EA3...
+home.title=T\u00ECm c\u00F4ng vi\u1EC7c, uy t\u00EDn, nhanh v\u1EDBi TaskUnite
+home.recent-job=M\u1EDBi nh\u1EA5t
+home.search=T\u00ECm ki\u1EBFm    
+home.city-province-or-region=Th\u00E0nh ph\u1ED1, t\u1EC9nh, khu v\u1EF1c...
+home.show-more=Xem th\u00EAm
