--- a/src/main/webapp/i18n/vi/global.json
+++ b/src/main/webapp/i18n/vi/global.json
@@ -10,6 +10,8 @@
         "notification": "Notification",
         "review": "Review",
         "message": "Message",
+        "tasker": "Tasker",
+        "address": "Address",
         "jhipster-needle-menu-add-entry": "JHipster will add additional entities here (do not translate!)"
       },
       "account": {
