hoan thành 50% view create task

--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -1,21 +1,34 @@
 # Error page
+web.name=TaskUnite
 error.title=Your request cannot be processed
 error.subtitle=Sorry, an error has occurred.
 error.status=Status:
 error.message=Message:
 
 # Activation email
-email.activation.title=TaskUnite account activation
+email.activation.title=taskunite account activation
 email.activation.greeting=Dear {0}
-email.activation.text1=Your TaskUnite account has been created, please click on the URL below to activate it:
+email.activation.text1=Your taskunite account has been created, please click on the URL below to activate it:
 email.activation.text2=Regards,
-email.signature=TaskUnite Team.
+email.signature=taskunite Team.
 
 # Creation email
-email.creation.text1=Your TaskUnite account has been created, please click on the URL below to access it:
+email.creation.text1=Your taskunite account has been created, please click on the URL below to access it:
 
 # Reset email
-email.reset.title=TaskUnite password reset
+email.reset.title=taskunite password reset
 email.reset.greeting=Dear {0}
-email.reset.text1=For your TaskUnite account a password reset was requested, please click on the URL below to reset it:
+email.reset.text1=For your taskunite account a password reset was requested, please click on the URL below to reset it:
 email.reset.text2=Regards,
+home.find-job=Find jobs
+home.contact=Contact
+home.post-new-job=Post new Job
+home.category=Category
+home.sign-in=Sign in
+home.services=Services 
+home.job-title-keywords-or-company-name=job title, keywords or company name...
+home.title=TaskUnite 
+home.recent-job=Recent Jobs
+home.search=Search
+home.city-province-or-region=city, province or region
+home.show-more=Show more
