--- a/src/main/resources/i18n/messages_vi.properties
+++ b/src/main/resources/i18n/messages_vi.properties
@@ -1,21 +1,34 @@
 # Error page
-error.title=Không thể thực thi yêu cầu của bạn
-error.subtitle=Rất tiếc, có lỗi xảy ra.
-error.status=Trạng thái:
-error.message=Tin nhắn:
+web.name=TaskUnite
+error.title=Kh\u00F4ng th\u1EC3 th\u1EF1c thi y\u00EAu c\u1EA7u c\u1EE7a b\u1EA1n
+error.subtitle=R\u1EA5t ti\u1EBFc, c\u00F3 l\u1ED7i x\u1EA3y ra.
+error.status=Tr\u1EA1ng th\u00E1i:
+error.message=Tin nh\u1EAFn:
 
 # Activation email
-email.activation.title=TaskUnite kích hoạt tài khoản
-email.activation.greeting=Gửi {0}
-email.activation.text1=Tài khoản của bạn TaskUnite đã được tạo, vui lòng bấm vào đường dẫn bên dưới để kích hoạt:
-email.activation.text2=Trân trọng,
-email.signature=Nhóm TaskUnite.
+email.activation.title=taskunite k\u00EDch ho\u1EA1t t\u00E0i kho\u1EA3n
+email.activation.greeting=G\u1EEDi {0}
+email.activation.text1=T\u00E0i kho\u1EA3n c\u1EE7a b\u1EA1n taskunite \u0111\u00E3 \u0111\u01B0\u1EE3c t\u1EA1o, vui l\u00F2ng b\u1EA5m v\u00E0o \u0111\u01B0\u1EDDng d\u1EABn b\u00EAn d\u01B0\u1EDBi \u0111\u1EC3 k\u00EDch ho\u1EA1t:
+email.activation.text2=Tr\u00E2n tr\u1ECDng,
+email.signature=Nh\u00F3m taskunite.
 
 # Creation email
-email.creation.text1=Tài khoản của bạn TaskUnite đã được tạo, vui lòng bấm vào đường dẫn bên dưới để truy cập:
+email.creation.text1=T\u00E0i kho\u1EA3n c\u1EE7a b\u1EA1n taskunite \u0111\u00E3 \u0111\u01B0\u1EE3c t\u1EA1o, vui l\u00F2ng b\u1EA5m v\u00E0o \u0111\u01B0\u1EDDng d\u1EABn b\u00EAn d\u01B0\u1EDBi \u0111\u1EC3 truy c\u1EADp:
 
 # Reset email
-email.reset.title=TaskUnite đặt lại mật khẩu
-email.reset.greeting=Gửi {0}
-email.reset.text1=Để đặt lại mật khẩu cho tài khoản cho tài khoản của bạn TaskUnite, vui lòng bấm vào đường dẫn bên dưới:
-email.reset.text2=Trân trọng,
+email.reset.title=taskunite \u0111\u1EB7t l\u1EA1i m\u1EADt kh\u1EA9u
+email.reset.greeting=G\u1EEDi {0}
+email.reset.text1=\u0110\u1EC3 \u0111\u1EB7t l\u1EA1i m\u1EADt kh\u1EA9u cho t\u00E0i kho\u1EA3n cho t\u00E0i kho\u1EA3n c\u1EE7a b\u1EA1n taskunite, vui l\u00F2ng b\u1EA5m v\u00E0o \u0111\u01B0\u1EDDng d\u1EABn b\u00EAn d\u01B0\u1EDBi:
+email.reset.text2=Tr\u00E2n tr\u1ECDng,
+home.find-job=T\u00ECm ki\u1EBFm
+home.contact=Li\u00EAn h\u1EC7
+home.post-new-job=\u0110\u0103ng vi\u1EC7c
+home.category=Danh m\u1EE5c
+home.sign-in=\u0110\u0103ng nh\u1EADp
+home.services=D\u1ECBch v\u1EE5
+home.job-title-keywords-or-company-name=t\u00EAn c\u00F4ng vi\u1EC7c, c\u00F4ng ty, m\u00F4 t\u1EA3...
+home.title=T\u00ECm c\u00F4ng vi\u1EC7c, uy t\u00EDn, nhanh v\u1EDBi TaskUnite
+home.recent-job=M\u1EDBi nh\u1EA5t
+home.search=T\u00ECm ki\u1EBFm
+home.city-province-or-region=Th\u00E0nh ph\u1ED1, t\u1EC9nh, khu v\u1EF1c...
+home.show-more=Xem th\u00EAm
