--- a/src/main/webapp/i18n/vi/task.json
+++ b/src/main/webapp/i18n/vi/task.json
@@ -16,6 +16,7 @@
       "detail": {
         "title": "Task"
       },
+      "title": "Title",
       "description": "Description",
       "planDate": "Plan Date",
       "totalPrice": "Total Price",
