register-task-view-success

--- a/src/main/resources/i18n/messages_vi.properties
+++ b/src/main/resources/i18n/messages_vi.properties
@@ -32,3 +32,15 @@ home.recent-job=M\u1EDBi nh\u1EA5t
 home.search=T\u00ECm ki\u1EBFm
 home.city-province-or-region=Th\u00E0nh ph\u1ED1, t\u1EC9nh, khu v\u1EF1c...
 home.show-more=Xem th\u00EAm
+register-task.cleaning=Làm Sạch
+register-task.description-clean=\
+Dọn dẹp một căn hộ, nhà ở, nhà nghỉ, hoặc văn phòng.
+register-task.scope-task=Phạm vi nhiệm vụ.
+register-task.clean-scope-1=Phòng tắm: Chà bồn rửa, nhà vệ sinh, và vòi sen / bồn tắm; lau gương.
+register-task.clean-scope-2=Bếp: Rửa chén; làm sạch / lau nhà bếp, bếp, quầy, và các thiết bị.
+register-task.clean-scope-3=Sàn nhà: Hút bụi, quét và / hoặc lau sàn nhà.
+register-task.clean-scope-4=Bụi: Đồ nội thất, bề mặt cứng và bệ cửa sổ.
+register-task.clean-scope-5=Thu dọn: Làm thẳng và tổ chức.
+register-task.clean-scope-6=Lấy rác / tái chế và thay thế túi rác.
+register-task.clean-scope-7=Khách hàng thường mong đợi bạn dọn dẹp toàn bộ không gian và mang theo dụng cụ và dụng cụ vệ sinh của riêng bạn (như máy hút bụi, cây lau nhà và thuốc xịt làm sạch) cho mỗi nhiệm vụ.
+register-task.clean-scope-8=Tôi có các kỹ năng và trình độ để thực hiện nhiệm vụ trong thể loại này.
