--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -32,3 +32,14 @@ home.recent-job=Recent Jobs
 home.search=Search
 home.city-province-or-region=city, province or region
 home.show-more=Show more
+register-task.cleaning=Cleaning
+register-task.description-clean=Cleaning an apartment, house, vacation home, or office.
+register-task.scope-task=Scope of Task
+register-task.clean-scope-1=Bathrooms: Scrubbing sink, toilet, and shower/bathtub; wiping mirrors.
+register-task.clean-scope-2=Kitchen: Washing dishes; cleaning/wiping backsplash, stove, counters, and appliances.
+register-task.clean-scope-3=Floors: Vacuuming, sweeping and/or mopping floors.
+register-task.clean-scope-4=Dusting: Furniture, hard surfaces, and window sills.
+register-task.clean-scope-5=Tidying: Straighten and organize.
+register-task.clean-scope-6=Taking out garbage/recycling and replacing trash bags.
+register-task.clean-scope-7=Clients typically expect you to clean the entire space and bring your own cleaning supplies and tools (such as a vacuum, mop, and cleaning sprays) to each task.
+register-task.clean-scope-8=I have the skills and qualifications to task in this category.
