hoàn thiện i18n trang home, step1-4. tiếng việt+tiếng anh

--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -32,3 +32,78 @@ home.recent-job=Recent Jobs
 home.search=Search
 home.city-province-or-region=city, province or region
 home.show-more=Show more
+contact.banner=Contact
+home.home-page=Home
+contact.link-contact=Contact
+task-create.step1.task-infor=Describe your task
+task-create.step1.task-notification=Tell us about your task. We use these details to show Taskers in your area who fit your needs.
+task-create.step2.task-prices=Browse Taskers & prices
+task-create.step1.task-address=ADDRESS
+task-create.step1.task-address1=1 Address
+task-create.step1.task-address2=2 Address
+task-create.step1.placeholder-address=Enter the work address
+task-create.step1.start-address=Address to start
+task-create.step1.placeholder-start-address=Enter the address to start working
+task-create.step1.placeholder-end-address=Enter the address to end working
+task-create.step1.end-address=Address to end
+task-create.next-btn=Continue
+task-create.step1.work-name=NAME OF WORK
+task-create.step1.placeholder-work-name=Enter the work name
+task-create.step1.work-categories=WORK CATEGORIES
+task-create.step1.categories-housework=Housework
+task-create.step1.estimate-time=ESTIMATED TIME (HOURS)
+task-create.step1.task-description=Task descrioption
+task-create.step1.task-des-placehoder=Task description, messages or requirements for this task. Thanks!
+task-create.step2.notification-1=Filter and sort to find your Tasker. Then view their availability to request your date and time.
+task-create.step2.sorted-by=SORTED BY:
+task-create.step2.sorted-by-recommended=Recommended
+task-create.step2.sorted-by-price-lowest-to-highest=Price (lowest to highest)
+task-create.step2.sorted-by-price-highest-to-lowest=Price (highest to lowest)
+task-create.step2.notification-2=Always assured. All special forces undergo ID (citizen identification) and criminal background checks.
+task-create.step2.task-date=TASK DATE
+task-create.step2.task-date-today=Today
+task-create.step2.task-date-within3days=Within 3 Days
+task-create.step2.task-date-withinaweek=Within A Week
+task-create.step2.task-date-choosedates=Choose Dates
+task-create.step2.task-time=Task Time
+task-create.step2.task-time-morning=Morning (8am - 12pm)
+task-create.step2.task-time-afternoon=Afternoon (12pm - 5pm)
+task-create.step2.task-time-evening=Evening (5pm - 9:30pm)
+task-create.step2.task-time-choose-a-specific-time=or choose a specific time
+task-create.step2.task-flexible=I'm Flexible
+task-create.step2.view-profile-reviews=View Profile & Reviews
+task-create.step2.select-continue-btn=Select & Continue
+task-create.step2.notification-3=You can chat with your Tasker, adjust task details, or change task time after booking.
+task-create.step2.elite-tasker=Elite Tasker
+task-create.step2.positive-reviews-detail="How often this Tasker received a positive review based on all tasks completed. Taskers are independent contractors and this rating helps you make a more informed decision when choosing a Tasker."
+task-create.step2.how-i-can-help=How I can help:
+task-create.step3.choose-date-time=Choose date & time
+task-create.step3.choose-task-date-and-start-time=Choose your task date and start time:
+task-create.step3.sunday=Sun
+task-create.step3.monday=Mon
+task-create.step3.tuesday=Tue
+task-create.step3.wednesday=Wed
+task-create.step3.thursday=Thu
+task-create.step3.friday=Fri
+task-create.step3.saturday=Sat
+task-create.step3.notification-1=You can chat to adjust task details or change start time after confirming.
+task-create.step3.request-for=Request for:
+task-create.step3.notification-2=Next, confirm your details to get connected with your Tasker.
+task-create.step4.notification-1=You’re almost done! We just need a few more details to connect you with your Tasker.
+task-create.step4.confirm-details=Confirm details
+task-create.step4.review-task-description=Review your task description
+task-create.step4.notification-2=You are charged only after your task is completed.
+task-create.step4.phone-number=Your phone number
+task-create.step4.phone-number-placeholder=Please enter your phone number
+task-create.step4.notification-3=Don't worry, you won't be charged until your task is complete. Once confirmed, you can chat with your Tasker to update the details.
+task-create.step4.price-vnd-hour=Price (VND / hour):
+task-create.step4.notification-4-1=A 
+task-create.step4.notification-4-2=15% Trust and Support fee
+task-create.step4.notification-4-3=is added to the Tasker’s total rate.
+task-create.step4.notification-5=You will not be charged until your task is complete. Tasks have a one-hour minimum. You can cancel or reschedule anytime. If you cancel your task within 24 hours of the scheduled start time, you may be charged a one-hour cancellation fee at the Tasker's hourly rate.
+task-create.step4.notification-6-1=Learn more
+task-create.step4.confirm-chat=Confirm & Chat
+task-create.step4.notification-6-2=about our cancellation policy.
+
+
+
