Modify homepage, add login url, using customize success handler

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -104,6 +104,17 @@ task-create.step4.notification-5=Bạn sẽ không bị tính phí cho đến kh
 task-create.step4.notification-6-1=Tìm hiểu thêm
 task-create.step4.notification-6-2=\ về chính sách của chúng tôi.
 task-create.step4.confirm-chat=Xác nhận & Nói chuyện
+home.register=Đăng ký
+register.form-title=Trở thành một thành viên
+register.username=Tên tài khoản
+register.password=Mật khẩu
+register.confirm-password=Xác nhận mật khẩu
+register.email=Email
+register.first-name=Tên
+register.last-name=Họ
+register.mobile-phone=Số điện thoại
+register.address=Địa chỉ
+home.profile=Trang cá nhân
 
 
 
