--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -52,7 +52,7 @@ task-create.step1.placeholder-work-name=Enter the work name
 task-create.step1.work-categories=WORK CATEGORIES
 task-create.step1.categories-housework=Housework
 task-create.step1.estimate-time=ESTIMATED TIME (HOURS)
-task-create.step1.task-description=Task descrioption
+task-create.step1.task-description=Task description
 task-create.step1.task-des-placehoder=Task description, messages or requirements for this task. Thanks!
 task-create.step2.notification-1=Filter and sort to find your Tasker. Then view their availability to request your date and time.
 task-create.step2.sorted-by=SORTED BY:
@@ -104,6 +104,17 @@ task-create.step4.notification-5=You will not be charged until your task is comp
 task-create.step4.notification-6-1=Learn more
 task-create.step4.confirm-chat=Confirm & Chat
 task-create.step4.notification-6-2=about our cancellation policy.
+home.register=Register
+register.form-title=Become a member
+register.username=Username
+register.password=Password
+register.confirm-password=Confirm password
+register.email=Email
+register.first-name=First name
+register.last-name=Last name
+register.mobile-phone=Mobile phone
+register.address=Address
+home.profile=Profile
 
 
 
