Added resources. Pending migration

--- a/src/main/resources/i18n/messages_vi.properties
+++ b/src/main/resources/i18n/messages_vi.properties
@@ -9,7 +9,7 @@ email.activation.title=TaskUnite kích hoạt tài khoản
 email.activation.greeting=Gửi {0}
 email.activation.text1=Tài khoản của bạn TaskUnite đã được tạo, vui lòng bấm vào đường dẫn bên dưới để kích hoạt:
 email.activation.text2=Trân trọng,
-email.signature=Nhóm TaskUnite.
+email.signature=Nhóm TaskUnite
 
 # Creation email
 email.creation.text1=Tài khoản của bạn TaskUnite đã được tạo, vui lòng bấm vào đường dẫn bên dưới để truy cập:
@@ -19,3 +19,98 @@ email.reset.title=TaskUnite đặt lại mật khẩu
 email.reset.greeting=Gửi {0}
 email.reset.text1=Để đặt lại mật khẩu cho tài khoản cho tài khoản của bạn TaskUnite, vui lòng bấm vào đường dẫn bên dưới:
 email.reset.text2=Trân trọng,
+home.find-job=T\u00ECm ki\u1EBFm
+home.contact=Li\u00EAn h\u1EC7
+home.post-new-job=\u0110\u0103ng vi\u1EC7c
+home.category=Danh m\u1EE5c
+home.sign-in=\u0110\u0103ng nh\u1EADp
+home.services=D\u1ECBch v\u1EE5
+home.job-title-keywords-or-company-name=t\u00EAn c\u00F4ng vi\u1EC7c, c\u00F4ng ty, m\u00F4 t\u1EA3...
+home.title=T\u00ECm c\u00F4ng vi\u1EC7c, uy t\u00EDn, nhanh v\u1EDBi TaskUnite
+home.recent-job=M\u1EDBi nh\u1EA5t
+home.search=T\u00ECm ki\u1EBFm
+home.city-province-or-region=Th\u00E0nh ph\u1ED1, t\u1EC9nh, khu v\u1EF1c...
+home.show-more=Xem th\u00EAm
+contact.banner=Liên Hệ
+home.home-page=Trang chủ
+contact.link-contact=Liên hệ
+task-create.step1.task-infor=Thông tin công việc
+task-create.step1.task-notification=Hãy cho chúng tôi về công việc của bạn, để hiển thị nhân viên trong khu vực của bạn phù hợp với nhu cầu của bạn.
+task-create.step2.task-prices=Tác vụ & giá tiền
+task-create.step1.task-address=ĐỊA CHỈ
+task-create.step1.task-address1=1 Địa chỉ
+task-create.step1.task-address2=2 Địa chỉ
+task-create.step1.placeholder-address=Nhập địa chỉ làm việc
+task-create.step1.start-address=Địa chỉ bắt đầu
+task-create.step1.placeholder-start-address=Nhập địa chỉ bắt đầu làm việc
+task-create.step1.placeholder-end-address=Nhập địa chỉ kết thúc làm việc
+task-create.step1.end-address=Địa chỉ kết thúc
+task-create.next-btn=Tiếp tục
+task-create.step1.work-name=TÊN CÔNG VIỆC
+task-create.step1.placeholder-work-name=Nhập tên công việc
+task-create.step1.work-categories=THỂ LOẠI CÔNG VIỆC
+task-create.step1.categories-housework=Công việc nhà
+task-create.step1.estimate-time=THỜI GIAN DỰ TÍNH (GIỜ)
+task-create.step1.task-description=Nội dung công việc
+task-create.step1.task-des-placehoder=Nội dung công việc, lời nhắn hoặc những yêu cầu cho công việc này. Cám ơn!
+task-create.step2.notification-1=Lọc và sắp xếp để tìm nhân viên của bạn. Sau đó xem sự sẵn có của họ để yêu cầu ngày và thời gian của bạn.
+task-create.step2.sorted-by=SẮP XẾP:
+task-create.step2.sorted-by-recommended=Liên quan
+task-create.step2.sorted-by-price-lowest-to-highest=Giá (thấp đến cao)
+task-create.step2.sorted-by-price-highest-to-lowest=Giá (cao đến thấp)
+task-create.step2.notification-2=Hãy yên tâm. Tất cả nhân viên được kiểm tra ID (căn cước công dân) và sơ yếu lý lịch.
+task-create.step2.task-date=NGÀY LÀM VIỆC
+task-create.step2.task-date-today=Hôm nay
+task-create.step2.task-date-within3days=Trong 3 ngày
+task-create.step2.task-date-withinaweek=Trong tuần
+task-create.step2.task-date-choosedates=Chọn ngày
+task-create.step2.task-time=Thời gian làm việc
+task-create.step2.task-time-morning=Sáng (8h - 12h)
+task-create.step2.task-time-afternoon=Chiều (12h - 15h)
+task-create.step2.task-time-evening=Tối (17h - 21h)
+task-create.step2.task-time-choose-a-specific-time=Chọn thời gian khác
+task-create.step2.task-flexible=Giờ cố định
+task-create.step2.view-profile-reviews=Thông tin & Đánh giá
+task-create.step2.select-continue-btn=Chọn và Tiếp tục
+task-create.step2.notification-3=Bạn có thể trò chuyện với Nhân viên, điều chỉnh chi tiết công việc hoặc thay đổi thời gian thực hiện công việc sau khi đặt lịch.
+task-create.step2.elite-tasker=Nhân viên ưu tú
+task-create.step2.positive-reviews-detail="Đánh giá tích cực dựa trên tất cả các công việc đã hoàn thành. Giúp bạn sáng suốt hơn khi chọn một nhân viên."
+task-create.step2.how-i-can-help=Tôi có thể giúp bạn:
+task-create.step3.choose-date-time=Chọn ngày và giờ
+task-create.step3.choose-task-date-and-start-time=Chọn ngày và thời gian bắt đầu làm việc:
+task-create.step3.sunday=CN
+task-create.step3.monday=Hai
+task-create.step3.tuesday=Ba
+task-create.step3.wednesday=Tư
+task-create.step3.thursday=Năm
+task-create.step3.friday=Sáu
+task-create.step3.saturday=Bảy
+task-create.step3.notification-1=Bạn có thể trò chuyện để điều chỉnh chi tiết công việc hoặc thay đổi thời gian bắt đầu sau khi xác nhận.
+task-create.step3.request-for=Yêu cầu:
+task-create.step3.notification-2=Tiếp theo, xác nhận thông tin của bạn để được kết nối với nhân viên của bạn.
+task-create.step4.notification-1=Gần xong rôi! Chúng tôi chỉ cần thêm một vài chi tiết để kết nối bạn với Nhân viên của bạn.
+task-create.step4.confirm-details=Xác nhận chi tiết
+task-create.step4.review-task-description=Xem lại mô tả công việc của bạn
+task-create.step4.notification-2=Bạn chỉ phải trả phí sau khi công việc của bạn được hoàn thành.
+task-create.step4.phone-number=Số điện thoại của bạn
+task-create.step4.phone-number-placeholder=Hãy nhập số điện thoại của bạn
+task-create.step4.notification-3=Đừng lo lắng, bạn sẽ không phải trả phí cho đến khi công việc của bạn hoàn thành. Sau khi xác nhận, bạn có thể trò chuyện với Nhân viên của mình để cập nhật thông tin chi tiết.
+task-create.step4.price-vnd-hour=Giá tiền (vnđ/giờ):
+task-create.step4.notification-4-1=Một khoản phí 
+task-create.step4.notification-4-2=\ Tin cậy và Hỗ trợ 15%
+task-create.step4.notification-4-3=được thêm vào tổng tỷ lệ của Nhân viên.
+task-create.step4.notification-5=Bạn sẽ không bị tính phí cho đến khi công việc của bạn được hoàn thành. Công việc tối thiểu một giờ. Bạn có thể hủy bỏ hoặc sắp xếp lại bất cứ lúc nào. Nếu bạn hủy nhiệm vụ trong vòng 24 giờ kể từ thời gian bắt đầu được lên lịch, bạn có thể bị tính phí hủy trong một giờ với mức giá hàng giờ của Nhân viên.
+task-create.step4.notification-6-1=Tìm hiểu thêm
+task-create.step4.notification-6-2=\ về chính sách của chúng tôi.
+task-create.step4.confirm-chat=Xác nhận & Nói chuyện
+home.register=Đăng ký
+register.form-title=Trở thành một thành viên
+register.username=Tên tài khoản
+register.password=Mật khẩu
+register.confirm-password=Xác nhận mật khẩu
+register.email=Email
+register.first-name=Tên
+register.last-name=Họ
+register.mobile-phone=Số điện thoại
+register.address=Địa chỉ
+home.profile=Trang cá nhân
