--- a/src/main/webapp/i18n/vi/userInformation.json
+++ b/src/main/webapp/i18n/vi/userInformation.json
@@ -16,6 +16,7 @@
       "detail": {
         "title": "User Information"
       },
+      "gender": "Gender",
       "address": "Address",
       "phone": "Phone",
       "status": "Status",
