--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -45,3 +45,6 @@ register-task.clean-scope-7=Khách hàng thường mong đợi bạn dọn dẹp
 register-task.clean-scope-8=Tôi có các kỹ năng và trình độ để thực hiện nhiệm vụ trong thể loại này.
 register-task.clean-scope-9=
 register-task.clean-scope-10=
+register-task.upload-avatar=Tải lên một bức ảnh rõ ràng, chuyên nghiệp của bạn để tăng khả năng được tuyển dụng.
+register-task.h5-register=Đăng ký để trở thành một Tasker
+register-task.what-work=Bạn muốn làm việc trong khu vực nào?*
