--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -43,3 +43,6 @@ register-task.clean-scope-5=Tidying: Straighten and organize.
 register-task.clean-scope-6=Taking out garbage/recycling and replacing trash bags.
 register-task.clean-scope-7=Clients typically expect you to clean the entire space and bring your own cleaning supplies and tools (such as a vacuum, mop, and cleaning sprays) to each task.
 register-task.clean-scope-8=I have the skills and qualifications to task in this category.
+register-task.upload-avatar=Upload a clear, professional photo of only yourself to increase your
+register-task.h5-register=Register to become a Tasker
+register-task.what-work=What metro would you like to work in?*
