--- a/src/main/resources/i18n/messages_vi.properties
+++ b/src/main/resources/i18n/messages_vi.properties
@@ -44,3 +44,6 @@ register-task.clean-scope-5=Thu dọn: Làm thẳng và tổ chức.
 register-task.clean-scope-6=Lấy rác / tái chế và thay thế túi rác.
 register-task.clean-scope-7=Khách hàng thường mong đợi bạn dọn dẹp toàn bộ không gian và mang theo dụng cụ và dụng cụ vệ sinh của riêng bạn (như máy hút bụi, cây lau nhà và thuốc xịt làm sạch) cho mỗi nhiệm vụ.
 register-task.clean-scope-8=Tôi có các kỹ năng và trình độ để thực hiện nhiệm vụ trong thể loại này.
+register-task.upload-avatar=Tải lên một bức ảnh rõ ràng, chuyên nghiệp của bạn để tăng khả năng được tuyển dụng.
+register-task.h5-register=Đăng ký để trở thành một Tasker
+register-task.what-work=Bạn muốn làm việc trong khu vực nào?*
