Tasker being registered

--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -25,9 +25,9 @@ home.contact=Contact
 home.post-new-job=Post new Job
 home.category=Category
 home.sign-in=Sign in
-home.services=Services 
+home.services=Services
 home.job-title-keywords-or-company-name=job title, keywords or company name...
-home.title=TaskUnite 
+home.title=TaskUnite
 home.recent-job=Recent Jobs
 home.search=Search
 home.city-province-or-region=city, province or region
@@ -97,7 +97,7 @@ task-create.step4.phone-number=Your phone number
 task-create.step4.phone-number-placeholder=Please enter your phone number
 task-create.step4.notification-3=Don't worry, you won't be charged until your task is complete. Once confirmed, you can chat with your Tasker to update the details.
 task-create.step4.price-vnd-hour=Price (VND / hour):
-task-create.step4.notification-4-1=A 
+task-create.step4.notification-4-1=A
 task-create.step4.notification-4-2=15% Trust and Support fee
 task-create.step4.notification-4-3=is added to the Tasker’s total rate.
 task-create.step4.notification-5=You will not be charged until your task is complete. Tasks have a one-hour minimum. You can cancel or reschedule anytime. If you cancel your task within 24 hours of the scheduled start time, you may be charged a one-hour cancellation fee at the Tasker's hourly rate.
@@ -115,3 +115,17 @@ register.last-name=Last name
 register.mobile-phone=Mobile phone
 register.address=Address
 home.profile=Profile
+register-task.cleaning=Cleaning
+register-task.description-clean=Cleaning an apartment, house, vacation home, or office.
+register-task.scope-task=Scope of Task
+register-task.clean-scope-1=Bathrooms: Scrubbing sink, toilet, and shower/bathtub; wiping mirrors.
+register-task.clean-scope-2=Kitchen: Washing dishes; cleaning/wiping backsplash, stove, counters, and appliances.
+register-task.clean-scope-3=Floors: Vacuuming, sweeping and/or mopping floors.
+register-task.clean-scope-4=Dusting: Furniture, hard surfaces, and window sills.
+register-task.clean-scope-5=Tidying: Straighten and organize.
+register-task.clean-scope-6=Taking out garbage/recycling and replacing trash bags.
+register-task.clean-scope-7=Clients typically expect you to clean the entire space and bring your own cleaning supplies and tools (such as a vacuum, mop, and cleaning sprays) to each task.
+register-task.clean-scope-8=I have the skills and qualifications to task in this category.
+register-task.upload-avatar=Upload a clear, professional photo of only yourself to increase your
+register-task.h5-register=Register to become a Tasker
+register-task.what-work=What metro would you like to work in?
