--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1,10 +1,4 @@
 # Error page
-error.title=Your request cannot be processed
-error.subtitle=Sorry, an error has occurred.
-error.status=Status:
-error.message=Message:
-
-# Error page
 error.title=Không thể thực thi yêu cầu của bạn
 error.subtitle=Rất tiếc, có lỗi xảy ra.
 error.status=Trạng thái:
@@ -29,13 +23,13 @@ home.find-job=Tìm kiếm
 web.name=TaskUnite
 home.contact=Liên hệ
 home.post-new-job=\u0110\u0103ng vi\u1EC7c
-home.category=Danh m\u1EE5c    
+home.category=Danh m\u1EE5c
 home.sign-in=\u0110\u0103ng nh\u1EADp
 home.services=D\u1ECBch v\u1EE5
 home.job-title-keywords-or-company-name=t\u00EAn c\u00F4ng vi\u1EC7c, c\u00F4ng ty, m\u00F4 t\u1EA3...
 home.title=T\u00ECm c\u00F4ng vi\u1EC7c, uy t\u00EDn, nhanh v\u1EDBi TaskUnite
 home.recent-job=M\u1EDBi nh\u1EA5t
-home.search=T\u00ECm ki\u1EBFm    
+home.search=T\u00ECm ki\u1EBFm
 home.city-province-or-region=Th\u00E0nh ph\u1ED1, t\u1EC9nh, khu v\u1EF1c...
 home.show-more=Xem th\u00EAm
 contact.banner=Liên Hệ
@@ -103,7 +97,7 @@ task-create.step4.phone-number=Số điện thoại của bạn
 task-create.step4.phone-number-placeholder=Hãy nhập số điện thoại của bạn
 task-create.step4.notification-3=Đừng lo lắng, bạn sẽ không phải trả phí cho đến khi công việc của bạn hoàn thành. Sau khi xác nhận, bạn có thể trò chuyện với Nhân viên của mình để cập nhật thông tin chi tiết.
 task-create.step4.price-vnd-hour=Giá tiền (vnđ/giờ):
-task-create.step4.notification-4-1=Một khoản phí 
+task-create.step4.notification-4-1=Một khoản phí
 task-create.step4.notification-4-2=\ Tin cậy và Hỗ trợ 15%
 task-create.step4.notification-4-3=được thêm vào tổng tỷ lệ của Nhân viên.
 task-create.step4.notification-5=Bạn sẽ không bị tính phí cho đến khi công việc của bạn được hoàn thành. Công việc tối thiểu một giờ. Bạn có thể hủy bỏ hoặc sắp xếp lại bất cứ lúc nào. Nếu bạn hủy nhiệm vụ trong vòng 24 giờ kể từ thời gian bắt đầu được lên lịch, bạn có thể bị tính phí hủy trong một giờ với mức giá hàng giờ của Nhân viên.
@@ -121,3 +115,20 @@ register.last-name=Họ
 register.mobile-phone=Số điện thoại
 register.address=Địa chỉ
 home.profile=Trang cá nhân
+register-task.cleaning=Làm Sạch
+register-task.description-clean=Dọn dẹp một căn hộ, nhà ở, nhà nghỉ, hoặc văn phòng.
+register-task.scope-task=Phạm vi nhiệm vụ.
+register-task.clean-scope-1=Phòng tắm: Chà bồn rửa, nhà vệ sinh, và vòi sen / bồn tắm; lau gương.
+register-task.clean-scope-2=Bếp: Rửa chén; làm sạch / lau nhà bếp, bếp, quầy, và các thiết bị.
+register-task.clean-scope-3=Sàn nhà: Hút bụi, quét và / hoặc lau sàn nhà.
+register-task.clean-scope-4=Bụi: Đồ nội thất, bề mặt cứng và bệ cửa sổ.
+register-task.clean-scope-5=Thu dọn: Làm thẳng và tổ chức.
+register-task.clean-scope-6=Lấy rác / tái chế và thay thế túi rác.
+register-task.clean-scope-7=Khách hàng thường mong đợi bạn dọn dẹp toàn bộ không gian và mang theo dụng cụ và dụng cụ vệ sinh của riêng bạn (như máy hút bụi, cây lau nhà và thuốc xịt làm sạch) cho mỗi nhiệm vụ.
+register-task.clean-scope-8=Tôi có các kỹ năng và trình độ để thực hiện nhiệm vụ trong thể loại này.
+register-task.clean-scope-9=
+register-task.clean-scope-10=
+register-task.upload-avatar=Tải lên một bức ảnh rõ ràng, chuyên nghiệp của bạn để tăng khả năng được tuyển dụng.
+register-task.h5-register=Đăng ký để trở thành một Tasker
+register-task.what-work=Bạn muốn làm việc trong khu vực nào?
+
