--- a/src/main/webapp/i18n/en/address.json
+++ b/src/main/webapp/i18n/en/address.json
@@ -22,7 +22,7 @@
       "updatedAt": "Updated At",
       "deletedAt": "Deleted At",
       "user": "User",
-      "dictrict": "Dictrict",
+      "district": "District",
       "tasker": "Tasker",
       "master": "Master"
     }
