--- a/src/main/webapp/i18n/vi/address.json
+++ b/src/main/webapp/i18n/vi/address.json
@@ -21,10 +21,8 @@
       "createdAt": "Created At",
       "updatedAt": "Updated At",
       "deletedAt": "Deleted At",
-      "user": "User",
       "district": "District",
-      "tasker": "Tasker",
-      "master": "Master"
+      "user": "User"
     }
   }
 }
