--- a/src/main/webapp/i18n/vi/task.json
+++ b/src/main/webapp/i18n/vi/task.json
@@ -16,6 +16,8 @@
       "detail": {
         "title": "Task"
       },
+      "address": "Address",
+      "title": "Title",
       "description": "Description",
       "estimatedTime": "Estimated Time",
       "price": "Price",
