--- a/src/main/webapp/i18n/vi/taskCategory.json
+++ b/src/main/webapp/i18n/vi/taskCategory.json
@@ -24,7 +24,7 @@
       "createdAt": "Created At",
       "updatedAt": "Updated At",
       "deletedAt": "Deleted At",
-      "taskerCategory": "Tasker Category",
+      "taskerCategories": "Tasker Categories",
       "tasks": "Tasks"
     }
   }
