--- a/src/main/webapp/i18n/vi/taskerCategory.json
+++ b/src/main/webapp/i18n/vi/taskerCategory.json
@@ -22,6 +22,7 @@
       "createdAt": "Created At",
       "updatedAt": "Updated At",
       "deletedAt": "Deleted At",
+      "tasks": "Tasks",
       "taskCategory": "Task Category",
       "user": "User"
     }
