--- a/src/main/webapp/i18n/vi/userInformation.json
+++ b/src/main/webapp/i18n/vi/userInformation.json
@@ -29,7 +29,8 @@
       "updatedAt": "Updated At",
       "deletedAt": "Deleted At",
       "user": "User",
-      "tasks": "Tasks",
+      "tasksAsTasker": "Tasks As Tasker",
+      "tasksAsMaster": "Tasks As Master",
       "reviews": "Reviews",
       "notifications": "Notifications",
       "taskerCategories": "Tasker Categories",
