--- a/src/main/webapp/i18n/en/taskCategory.json
+++ b/src/main/webapp/i18n/en/taskCategory.json
@@ -23,6 +23,7 @@
       "createdAt": "Created At",
       "updatedAt": "Updated At",
       "deletedAt": "Deleted At",
+      "tasks": "Tasks",
       "taskerCategories": "Tasker Categories"
     }
   }
