--- a/src/main/webapp/i18n/vi/global.json
+++ b/src/main/webapp/i18n/vi/global.json
@@ -25,6 +25,7 @@
         "taskerCategory": "Tasker Category",
         "adminTransaction": "Admin Transaction",
         "adminProfit": "Admin Profit",
+        "message": "Message",
         "jhipster-needle-menu-add-entry": "JHipster will add additional entities here (do not translate!)"
       },
       "account": {
