--- a/src/main/webapp/i18n/en/task.json
+++ b/src/main/webapp/i18n/en/task.json
@@ -3,15 +3,15 @@
     "task": {
       "home": {
         "title": "Tasks",
-        "createLabel": "Thêm mới một Task",
-        "createOrEditLabel": "Thêm mới hoặc cập nhật Task",
+        "createLabel": "Create a new Task",
+        "createOrEditLabel": "Create or edit a Task",
         "notFound": "No Tasks found"
       },
-      "created": "Một Task mới được tạo với định danh {{ param }}",
-      "updated": "Một Task cập nhật với định danh {{ param }}",
-      "deleted": "Một Task đã xóa với định danh {{ param }}",
+      "created": "A new Task is created with identifier {{ param }}",
+      "updated": "A Task is updated with identifier {{ param }}",
+      "deleted": "A Task is deleted with identifier {{ param }}",
       "delete": {
-        "question": "Bạn có chắc là muốn xóa Task {{ id }}?"
+        "question": "Are you sure you want to delete Task {{ id }}?"
       },
       "detail": {
         "title": "Task"
