--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -11,6 +11,9 @@ email.activation.text1=Tài khoản của bạn TaskUnite đã được tạo, v
 email.activation.text2=Trân trọng,
 email.signature=Nhóm TaskUnite.
 
+# lewlew
+email.task.notify=Bạn có 1 Task mới!
+
 # Creation email
 email.creation.text1=Tài khoản của bạn TaskUnite đã được tạo, vui lòng bấm vào đường dẫn bên dưới để truy cập:
 
